Fixed image spacing for single-page grids.

--- a/resources/css/master.css
+++ b/resources/css/master.css
@@ -517,7 +517,6 @@ div.gridElem
 float:left;
 width:134px;
 height:134px;
-margin:5px 0px 0px 5px;
 background-image:url('../misc/134GridBackground.png');
 }
 img.indexGrid
